# esp-lcd-device

./: .gitignore  CMakeLists.txt  Kconfig.projbuild  README.md  idf_component.yml
devices/ili9486/: ili9486.c
devices/ssd1306/: ssd1306.c  ssd1306.h
